welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: type White
setCouleurBrosse(c:White)
                   ^Program:1: error: not found: value c
setCouleurBrosse(c:White)
                 ^